<?xml version="1.0"?>
<package format="2">
  <name>artgslam_vsc</name>
  <version>0.0.1</version>
  <description>Map viewer with SFML and TGUI integrated with ROS</description>

  <maintainer email="orangepi@todo.todo">orangepi</maintainer>
  <license>MIT</license>

  <!-- Dependencias ROS -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>joy</depend>
  <depend>rosaria</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>

  <!-- Dependencias del sistema (documentativo) -->
  <exec_depend>libsfml-dev</exec_depend>
  <exec_depend>libtgui-dev</exec_depend>

  <export>
    <!-- Información adicional opcional -->
  </export>
</package>
